# kicad_symbol_property_attacher

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  RELEASE_NOTES.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: dependencies.md  hardware-adjustment.md
specs/001-kicad-symbol-property/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kicad-symbol-property/checklists/: requirements.md
specs/001-kicad-symbol-property/contracts/: cli-contract.md
src/cli/: main.py
src/lib/: attacher.py  io.py  parser.py  report.py
tests/fixtures/kicad_v9/: official-basic-no-prop-SzlcscCode.kicad_sym  official-mixed-some-prop-SzlcscCode.kicad_sym  official-prop-template.txt
tests/integration/: test_backup.py  test_cli_attach.py  test_cli_cross_platform.py
tests/unit/: test_attacher.py  test_io.py  test_parser.py  test_report.py
tmp/: ci_ruff_error.txt  ci_ruff_error_2.txt
